--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="ameneties">
                 <h3>Ameneties</h3>
-                <h4>Internet, Kitchen...</h4>
+                <h4>Internet, Kitchen</h4>
             </div>
             <button>Search</button>
         </section>
