--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -52,13 +52,13 @@
         <section class="places">
             <h1>Places</h1>
                 <article class="card">
-                    <h2>Cabin</h2>
+                    <h2>My home</h2>
                 </article>
                 <article class="card">
-                    <h2>Apartment</h2>
+                    <h2>Tiny house</h2>
                 </article>
                 <article class="card">
-                    <h2>Beach House</h2>
+                    <h2>A suite</h2>
                 </article>
         </section>
 
