--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -93,7 +93,18 @@
                         </div>
                     </div>
                     <div class="user"> <b>Owner: </b>Francis Wayland Thurston</div>
-                    <div class="desc">This is a tiny house but don't fret. We've been digging tunnels to the nearest bank so now we have space for dayzzzzzz! Remember that movie Barbarian? Kinda like that but hopefully there isn't a feral cave woman living in there. Is that a spoiler? I think that detail was in the trailer so its not really a spoiler. I just remembered Justin Long was in that movie while I was writing this. I almost didn't go see it after i was invited to the premiere but I'm glad I did. It was a good movie. I'd get it on blu-ray if Best Buy still carried dvds. I could get it on Amazon but it costs like 3 times more. That could be why Best Buy stopped selling them. Who knows? Is this description long enough yet?</div>
+                    <div class="desc">This is a tiny house but don't fret. We've been
+                        digging tunnels to the nearest bank so now we have space for
+                        dayzzzzzz! Remember that movie Barbarian? Kinda like that but
+                        hopefully there isn't a feral cave woman living in there. Is
+                        that a spoiler? I think that detail was in the trailer so its
+                        not really a spoiler. I just remembered Justin Long was in that
+                        movie while I was writing this. I almost didn't go see it after
+                        I was invited to the premiere but I'm glad I did. It was a
+                        good movie. I'd get it on blu-ray if Best Buy still carried
+                        dvds. I could get it on Amazon but it costs like 3 times more.
+                        That could be why Best Buy stopped selling them. Who knows?
+                        Is this description long enough yet?</div>
                 </article>
                 <article class="card">
                     <div class="card-top">
